Update logo and enhance Gem Chase description

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <body>
 
     <header>
-        <img src="logo.png" alt="Silver Labrador Logo" class="logo">
+        <img src="24B5E640-0F66-449A-AA6D-0824346E1881.png" alt="Silver Labrador Logo" class="logo">
         <h1>Silver Labrador, LLC</h1>
     </header>
 
@@ -105,27 +105,18 @@
         <section class="feature-box">
             <h2>Featured Development: Gem Chase</h2>
             <p>
-                We are currently preparing for the global launch of our flagship mobile application, <strong>Gem Chase</strong>. Slated for release on the Apple App Store, Gem Chase represents the pinnacle of our mobile development efforts, offering a polished, high-engagement experience built on cutting-edge frameworks.
+                We are currently preparing for the global launch of our flagship mobile application, <strong><a href="http://gemchase.com" target="new">Gem Chase</a></strong>. Slated for release on the Apple App Store, Gem Chase represents the pinnacle of our mobile development efforts, offering a polished, high-engagement experience built on cutting-edge frameworks.
             </p>
             <p>
                 Gem Chase showcases our capability to handle complex real-time data processing within a seamless mobile interface. As we move through the final stages of the submission process, Silver Labrador, LLC remains committed to delivering a bug-free, premium experience for users worldwide.
             </p>
         </section>
 
-        <section style="text-align: center; margin-top: 60px;">
-            <h2>Inquiries</h2>
-            <p>Interested in our services or have questions about Gem Chase?</p>
-            <a href="mailto:support@yourdomain.com" class="contact-btn">Contact Our Team</a>
-        </section>
+        
     </div>
 
     <div class="footer">
         <p>&copy; 2026 Silver Labrador, LLC. All rights reserved.</p>
-        <p>
-            <a href="#">Privacy Policy</a> | 
-            <a href="#">Terms of Service</a> | 
-            <a href="#">Support</a>
-        </p>
     </div>
 
 </body>
