Revise Gem Chase application description in index.html
Updated the description of the Gem Chase application to focus on its features and market analysis capabilities.

--- a/index.html
+++ b/index.html
@@ -105,11 +105,9 @@
         <section class="feature-box">
             <h2>Featured Development: Gem Chase</h2>
             <p>
-                We are currently preparing for the global launch of our flagship mobile application, <strong><a href="http://gemchase.com" target="new">Gem Chase</a></strong>. Slated for release on the Apple App Store, Gem Chase represents the pinnacle of our mobile development efforts, offering a polished, high-engagement experience built on cutting-edge frameworks.
+                <a href="https://gemchase.com">Gem Chase</a> provides a structured look at the sports card market for collectors who buy raw and sell graded. By processing price gaps, gem rates, and seasonal market trends, the app identifies cards with significant spreads between raw and PSA-graded values. Our goal is to replace "gut feel" with a systematic approach, using an algorithm that weighs liquidity and market timing to help you organize your next grading submission.
             </p>
-            <p>
-                Gem Chase showcases our capability to handle complex real-time data processing within a seamless mobile interface. As we move through the final stages of the submission process, Silver Labrador, LLC remains committed to delivering a bug-free, premium experience for users worldwide.
-            </p>
+            
         </section>
 
         
