Revise company description in index.html
Updated company description to highlight mobile application focus and upcoming release.

--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
         <section>
             <h2>Modern Technology Services</h2>
             <p>
-                Silver Labrador, LLC is a premier technology services firm focused on the architecture and delivery of high-performance mobile and web solutions. We specialize in technical consulting, custom software engineering, and strategic digital implementation for clients requiring precision and scalability.
+                Silver Labrador, LLC builds and published useful mobile applications. We focus on creating high-quality, native digital tools designed to provide intuitive and engaging user experiences. Our mission is to bring them directly to users through the Apple App Store, beginning with our upcoming release, <a href="https://gemchase.com">Gem Chase</a>.
             </p>
-            <p>
-                Our approach combines deep technical expertise with user-centric design. We provide end-to-end services ranging from initial systems analysis and UI/UX prototyping to backend infrastructure management. At Silver Labrador, we believe in building technology that is as robust as it is intuitive.
-            </p>
+           
         </section>
 
         <section class="feature-box">
