Update footer with contact email link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2026 Silver Labrador, LLC. All rights reserved.</p>
+        <p>&copy; 2026 Silver Labrador, LLC. All rights reserved | <a href="mailto:info@silverlabroadorllc.com">info@silverlabroadorllc.com</a> </p>
     </div>
 
 </body>
